--- a/src/pages/post/post.module.scss
+++ b/src/pages/post/post.module.scss
@@ -45,18 +45,46 @@
             margin: 2rem 0;
         }
     }
-    footer { 
+    footer {
             a { color: var(--highlight)}
             display: block;
             max-width: 700px;
-            margin: 5rem auto 0;
+            margin: 3rem auto 4rem;
+            border-top: 1px solid rgba(66, 66, 66, 0.733);
+
             >div { 
+                margin: 2rem auto 0;
                 display: flex;
                 justify-content: space-between;
                 > div { 
                     align-content: flex-start;
                 }
                 & + div { align-content: flex-end; }    
+            }
+
+            .NavegationPages{
+                > div:nth-child(1) {
+                    width: 40%;
+                    text-align: left;
+                }
+                div:nth-child(2) {
+                    width: 40%;
+                    text-align: right;
+                }
+            }
+            aside{
+                margin-top: 2rem;
+                display: flex;
+                width: 100%;
+                height: 2rem;
+                background-color: white;
+                text-align: center;
+                align-items: center;
+                justify-content: center;
+                border-radius: 0.3rem;
+                a { color: black ;
+                    font-weight: bold;
+                }
             }
     }
 
